clean for change request