@@ -187,7 +187,7 @@ class MessageValidatorTest {
                 .messageId(messageId.toString())
                 .additionalLanguages(List.of("it", "de"))
                 .build();
-        NotificationInt notificationInt = NotificationInt.builder()
+        NotificationInt notification = NotificationInt.builder()
                 .iun("IUN_01")
                 .sender(NotificationSenderInt.builder().paId(senderId.toString()).build())
                 .recipients(List.of(recipient))
@@ -197,7 +197,7 @@ class MessageValidatorTest {
         when(message.getSecondaryContent().getLanguage().getValue()).thenReturn("fr");
         when(pnDataVaultClientReactive.getMessageById(messageId, senderId)).thenReturn(Mono.just(message));
 
-        StepVerifier.create(messageValidator.validate(notificationInt))
+        StepVerifier.create(messageValidator.validate(notification))
                 .expectErrorSatisfies(throwable -> {
                     Assertions.assertInstanceOf(PnValidationMessageLanguageMismatchException.class, throwable);
                     PnValidationMessageLanguageMismatchException ex = (PnValidationMessageLanguageMismatchException) throwable;
@@ -211,11 +211,12 @@ class MessageValidatorTest {
     void validateWhenSecondaryLanguageIsNullAndAdditionalLanguagesIsPresentThenThrowMismatch() {
         UUID senderId = UUID.randomUUID();
         UUID messageId = UUID.randomUUID();
+
         NotificationRecipientInt recipient = NotificationRecipientInt.builder()
                 .messageId(messageId.toString())
                 .additionalLanguages(List.of("it", "de"))
                 .build();
-        NotificationInt notificationInt = NotificationInt.builder()
+        NotificationInt notification = NotificationInt.builder()
                 .iun("IUN_01")
                 .sender(NotificationSenderInt.builder().paId(senderId.toString()).build())
                 .recipients(List.of(recipient))
@@ -225,7 +226,7 @@ class MessageValidatorTest {
         when(message.getSecondaryContent()).thenReturn(null);
         when(pnDataVaultClientReactive.getMessageById(messageId, senderId)).thenReturn(Mono.just(message));
 
-        StepVerifier.create(messageValidator.validate(notificationInt))
+        StepVerifier.create(messageValidator.validate(notification))
                 .expectErrorSatisfies(throwable -> {
                     Assertions.assertInstanceOf(PnValidationMessageLanguageMismatchException.class, throwable);
                     PnValidationMessageLanguageMismatchException ex = (PnValidationMessageLanguageMismatchException) throwable;
@@ -239,7 +240,16 @@ class MessageValidatorTest {
     void validateWhenSecondaryLanguageIsNullAndAdditionalLanguagesIsEmptyThenPass() {
         UUID senderId = UUID.randomUUID();
         UUID messageId = UUID.randomUUID();
-        NotificationInt notification = buildNotification(senderId, messageId, Collections.emptyList());
+
+        NotificationRecipientInt recipient = NotificationRecipientInt.builder()
+                .messageId(messageId.toString())
+                .additionalLanguages(Collections.emptyList())
+                .build();
+        NotificationInt notification = NotificationInt.builder()
+                .iun("IUN_01")
+                .sender(NotificationSenderInt.builder().paId(senderId.toString()).build())
+                .recipients(List.of(recipient))
+                .build();
 
         MessageResponseDto message = mock(MessageResponseDto.class, RETURNS_DEEP_STUBS);
         when(message.getSecondaryContent()).thenReturn(null);
@@ -253,7 +263,16 @@ class MessageValidatorTest {
     void validateWhenSecondaryLanguageMatchesIgnoringCaseThenPass() {
         UUID senderId = UUID.randomUUID();
         UUID messageId = UUID.randomUUID();
-        NotificationInt notification = buildNotification(senderId, messageId, List.of("it", "EN"));
+
+        NotificationRecipientInt recipient = NotificationRecipientInt.builder()
+                .messageId(messageId.toString())
+                .additionalLanguages(List.of("it", "EN"))
+                .build();
+        NotificationInt notification = NotificationInt.builder()
+                .iun("IUN_01")
+                .sender(NotificationSenderInt.builder().paId(senderId.toString()).build())
+                .recipients(List.of(recipient))
+                .build();
 
         MessageResponseDto message = mock(MessageResponseDto.class, RETURNS_DEEP_STUBS);
         when(message.getSecondaryContent().getLanguage().getValue()).thenReturn("en");
@@ -263,13 +282,20 @@ class MessageValidatorTest {
                 .verifyComplete();
     }
 
-    // --- Nuovi test: lingua secondaria presente ma additionalLanguages assente → OK ---
-
     @Test
     void validateWhenSecondaryLanguageIsPresentAndAdditionalLanguagesIsNullThenPass() {
         UUID senderId = UUID.randomUUID();
         UUID messageId = UUID.randomUUID();
-        NotificationInt notification = buildNotification(senderId, messageId, null);
+
+        NotificationRecipientInt recipient = NotificationRecipientInt.builder()
+                .messageId(messageId.toString())
+                .additionalLanguages(null)
+                .build();
+        NotificationInt notification = NotificationInt.builder()
+                .iun("IUN_01")
+                .sender(NotificationSenderInt.builder().paId(senderId.toString()).build())
+                .recipients(List.of(recipient))
+                .build();
 
         MessageResponseDto message = mock(MessageResponseDto.class, RETURNS_DEEP_STUBS);
         when(message.getSecondaryContent().getLanguage().getValue()).thenReturn("de");
@@ -283,7 +309,16 @@ class MessageValidatorTest {
     void validateWhenSecondaryLanguageIsPresentAndAdditionalLanguagesIsEmptyThenPass() {
         UUID senderId = UUID.randomUUID();
         UUID messageId = UUID.randomUUID();
-        NotificationInt notification = buildNotification(senderId, messageId, Collections.emptyList());
+
+        NotificationRecipientInt recipient = NotificationRecipientInt.builder()
+                .messageId(messageId.toString())
+                .additionalLanguages(Collections.emptyList())
+                .build();
+        NotificationInt notification = NotificationInt.builder()
+                .iun("IUN_01")
+                .sender(NotificationSenderInt.builder().paId(senderId.toString()).build())
+                .recipients(List.of(recipient))
+                .build();
 
         MessageResponseDto message = mock(MessageResponseDto.class, RETURNS_DEEP_STUBS);
         when(message.getSecondaryContent().getLanguage().getValue()).thenReturn("de");
